--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,13 @@
     ],
     "dependencies": {
         "ckeditor": "~4.4.7",
-        "jquery": "~2.1.4"
-    }
+        "jquery": "~2.1.4",
+        "angular": "~1.3.15",
+        "normalize.css": "~3.0.3"
+    },
+    "devDependencies": {
+        "more-or-less": "~1.5.1",
+        "less.js": "~2.5.0"
+    },
+    
 }
