--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "bbcode",
+  "name": "ORBBE",
   "version": "0.0.0",
-  "description": "A special web based bbcode editor, that allows previewing bbcode and html together.",
+  "description": "A special web based live bbcode editor, that allows previewing bbcode and html together.",
   "author": "Christopher Krier <ckrier.3000@gmail.com>",
+  "repository": {
+      "type": "git",
+      "url": "git://gitlab.com/coaster3000/ORBBE.git"
+  },
   "contributors": [],
   "devDependencies": {
     "bower": "^1.4.1",
     "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-bower": "^0.18.0"
+    "grunt-contrib-copy": "^0.8.0"
   },
   "keywords": [
     "editor",
@@ -19,7 +22,7 @@
     "Christopher Krier <ckrier.3000@gmail.com>"
   ],
   "license": "MIT",
-  "homepage": "http://coaster3000.tk",
+  "homepage": "https://gitlab.com/coaster3000/ORBBE",
   "ignore": [
     "**/.*",
     "node_modules",
